kubernetes/istio-demo/manifests/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: demo
        imagePullPolicy: Never
        command:
          - "/bin/sleep"
        args:
          - "99999999"
