kubernetes/istio-demo/manifests/echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: demo
        imagePullPolicy: Never
        command:
          - "/bin/sh"
        args:
          - "-c"
          - "nc -lk -p 7 -e cat"
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector:
    app: echo
  ports:
    - port: 7
