kubernetes/istio-demo/manifests/istio-outside-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "outside"
 namespace: "inside"
spec:
 host: "*.outside.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
